--- a/index.html
+++ b/index.html
@@ -11,14 +11,56 @@
    <div class="container">
       <div class="left-container">
          <div class="logo">
-            <img src="odin-lined.png" alt="odin">
+            <img src="Assets/odin-lined.png" alt="odin">
             <p>ODIN</p>
          </div>
-
-
       </div>
       <div class="right-container">
-
+         <div class="intro">
+            <div>
+               <p>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. </p>
+               <p>Sign up now to get started.</p>
+            </div>
+            <div>
+               <p>You know you want to.</p>
+            </div>
+         </div>
+         <div class="form">
+            <form action="">
+               <p>Lets do this</p>
+               <div class="form-row">
+                  <div class="form-column">
+                     <label for="firstName">FIRST NAME</label>
+                     <input type="text" id="firstName" name="firstName">
+                  </div>
+                  <div class="form-column">
+                     <label for="LastName">LAST NAME</label>
+                     <input type="text" id="LastName" name="LastName">
+                  </div>
+               </div>
+               <div class="form-row">
+                  <div class="form-column">
+                     <label for="email">EMAIL</label>
+                     <input type="email" id="email" name="email">
+                  </div>
+                  <div class="form-column">
+                     <label for="phone">PHONE NUMBER</label>
+                     <input type="tel" id="phone" name="phone">     
+                  </div>
+               </div>
+               <div class="form-row">
+                  <div class="form-column">
+                     <label for="user_password">PASSWORD</label>
+                     <input type="password" id="user_password" name="password">
+                  </div>
+                  <div class="form-column">
+                     <label for="confirm_password">CONFIRM PASSWORD</label>
+                     <input type="password" id="confirm_password" name="confirm_password">
+                  </div>
+               </div>
+            </form>
+         </div>
+         <div class="finish"></div>
       </div>
    </div>
 </body>
