style the form section

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
          </div>
          <div class="form">
             <form action="">
-               <p>Lets do this</p>
+               <p>Lets do this!</p>
                <div class="form-row">
                   <div class="form-column">
                      <label for="firstName">FIRST NAME</label>
@@ -51,11 +51,11 @@
                <div class="form-row">
                   <div class="form-column">
                      <label for="user_password">PASSWORD</label>
-                     <input type="password" id="user_password" name="password">
+                     <input type="password" id="user_password" name="password" class="error">
                   </div>
                   <div class="form-column">
                      <label for="confirm_password">CONFIRM PASSWORD</label>
-                     <input type="password" id="confirm_password" name="confirm_password">
+                     <input type="password" id="confirm_password" name="confirm_password" class="error">
                   </div>
                </div>
             </form>
