--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
          <div class="intro">
             <div>
                <p>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. </p>
-               <p>Sign up now to get started.</p>
+               <p>Sign up <em>now</em> to get started.</p>
             </div>
             <div>
-               <p>You know you want to.</p>
+               <p>You <em>know</em> you want to.</p>
             </div>
          </div>
          <div class="form">
@@ -60,7 +60,10 @@
                </div>
             </form>
          </div>
-         <div class="finish"></div>
+         <div class="finish">
+            <button>Create Account</button>
+            <p>Already have an account? <span>Log in</span></p>
+         </div>
       </div>
    </div>
 </body>
