add validation to the form through js

--- a/index.html
+++ b/index.html
@@ -26,18 +26,18 @@
                <p>You <em>know</em> you want to.</p>
             </div>
          </div>
-         <div class="form">
+         <div class="form" id="form">
             <form action="" id="myForm">
                <p>Lets do this!</p>
                <div class="form-row">
                   <div class="form-column">
                      <label for="firstName">*FIRST NAME</label>
-                     <input type="text" id="firstName" name="firstName" class="error">
+                     <input type="text" id="firstName" name="firstName">
                      <small></small>
                   </div>
                   <div class="form-column">
-                     <label for="LastName">*LAST NAME</label>
-                     <input type="text" id="LastName" name="LastName">
+                     <label for="lastName">*LAST NAME</label>
+                     <input type="text" id="lastName" name="lastName">
                      <small></small>
                   </div>
                </div>
